<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothBox</string>
    <string name="ab_subtitle">Application</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_band_settings">Band</string>
    <string name="action_music_sortsettings">Music Sort</string>
    <string name="radio">RADIO</string>
    <string name="cardsongplay">SD CARD</string>
    <string name="bluetoothpush">PUSH</string>
    <string name="alarmclock">ALARM CLOCK</string>
    <string name="device_connection">CONNECTION</string>
    <string name="light">LIGHT</string>
    <string name="linein">LINE IN </string>
    <string name="rec_card_playback">CARD RECORD PLAYBACK </string>
    <string name="rec_uhost_playback">UHOST RECORD PLAYBACK </string>
    <string name="playlist">PlayList</string>
    <string name="uhostplay">UHOST</string>
    <string name="notice_dialog_FM_preparation">Searching channels.....</string>
    <string name="notice_no_bluetooth_support">No bluetooth supported!</string>
    <string name="notice_search_select_bluetooth">Search/select bluetooth decice:</string>
    <string name="notice_device_not_found">Device not found!</string>
    <string name="notice_device_cannot_connect">Device can not connect!</string>
    <string name="notice_device_connected">connected</string>
    <string name="notice_device_media_connecting">media connecting...</string>
    <string name="notice_device_disconnected">disconnected</string>
    <string name="notice_device_data_connecting">data connecting...</string>
    <string name="notice_device_media_connected">media connected</string>
    <string name="notice_device_media_pairing">pairing...</string>
    <string name="notice_loadingnum">Total number of songs： </string>
    <string name="notice_loadingcurrentnum">Current loading： </string>
    <string name="dialog_title_message">Message</string>
    <string name="dialog_message_exit">Are you want to exit the BluetoothBox?</string>
    <string name="dialog_message_disconncect">Are you want to disconnect the current connection?</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_info">Info</string>
    <string name="dialog_title_device">Device</string>
    <string name="dialog_title_devicename">Device Name</string>
    <string name="dialog_show_disconnect">Disconnect</string>
    <string name="dialog_modify_devicename">Modify Device Name</string>
    <string name="dialog_show_deviceupdate">Firmware Upgrade</string>
    <string name="dialog_show_devicemessage">Device Information</string>
    <string name="dialog_show_setting_message">Turn Settings to proceed?</string>
    <string name="dialog_show_setting_positive">Goto</string>
    <string name="notice_bluetooth_not_supported">Bluetooth is not supported!</string>
    <string name="notice_playmode_notexit">Play mode are not exit!</string>
    <string name="notice_playmode_straight">Play straightly</string>
    <string name="notice_playmode_repeat">Play repeatly</string>
    <string name="notice_playmode_toggle">Play togglely</string>
    <string name="notice_playmode_repeatone">Play repeatonely</string>
    <string name="notice_playmode_continue">Play continue</string>
    <string name="notice_playmode_lastsong">It is the last song!</string>
    <string name="notice_list_null">list null!</string>
    <string name="notice_bluetoothbox_exception">BluetoothBox Exception</string>
    <string name="notice_alarmclock_add_alarm">Add AlarmClock</string>
    <string name="notice_lyric_warn">Error reading or writting! Lyric is not support!</string>
    <string name="notice_control_error">暂时无法执行，清检查设备是否已经连接</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="alarmclock_description">Description</string>
    <string name="alarmclock_description_hint">Alarm Clock</string>
    <string name="alarmclock_description_default">Description</string>
    <string name="alarmclock_repeat">Repeat</string>
    <string name="alarmclock_repeat_default">Never</string>
    <string name="alarmclock_type">Alarm Type</string>
    <string name="alarmclock_music">AlarmMusic</string>
    <string name="alarmclock_bell">SystemBell</string>
    <string name="alarmclock_cardsong">CardMusic</string>
    <string name="alarmclock_fm">FM</string>
    <string name="alarmclock_uhost">UhostMusic</string>
    <string name="alarmclock_snooze">Snooze</string>
    <string name="alarmclock_turnoff">Turn Off</string>
    <string name="alarmclock_snoozing">Snoozing for 5 minutes</string>
    <string name="alarmclock_too_many_entries">Supports up to four alarm entries.</string>
    <string name="music_preparation_message">Music is in preparation...</string>
    <string name="music_info_title">Title:</string>
    <string name="music_info_artist">Artist:</string>
    <string name="music_info_ablum">Ablum:</string>
    <string name="music_info_styles">Styles:</string>
    <string name="music_info_mime">Format:</string>
    <string name="music_info_bitratio">Bit ratio:</string>
    <string name="music_info_sampleratio">Sample ratio:</string>
    <string name="connection_connect_fail">Fail to connect. Please Retry.</string>
    <string name="connection_connect_data_fail">Fail to connect for data. Please check your device.</string>
    <string name="ok">OK</string>
    <string name="music_info_error">Sorry,the player doesn\'t support this type of audio file.</string>
    <string name="music_storge_busy">Memory card has been occupied.</string>
    <string name="unknown">Unknown</string>
    <string name="music_totaltime">00:00</string>
    <string name="charge_warm">Warm</string>
    <string name="charge_tip">Power is insufficient, please recharge!</string>
    <string name="bluetoothbox_fagment_listview_musicname">MusicName</string>
    <string name="bluetoothbox_fagment_listview_author">Author</string>
    <string name="menu_title_sound">Sound Setting</string>
    <string name="menu_item_nosound">No digital sound</string>
    <string name="menu_item_eqsound">EQ </string>
    <string name="menu_item_daesound">DAE</string>
    <string name="message_press_quit">Press once again to quit</string>
    <string name="radio_band_china_usa">China/USA</string>
    <string name="radio_band_japan">Japan</string>
    <string name="radio_band_europe">Europe </string>

    <!-- light -->
    <!-- 控制按钮 -->
    <string name="control_trun_on">开</string>
    <string name="control_trun_off">关</string>
    <string name="control_brightness_up">亮度↑</string>
    <string name="control_brightness_down">亮度↓</string>
    <string name="control_color_R">R</string>
    <string name="control_color_G">G</string>
    <string name="control_color_B">B</string>
    <string name="control_color_W">W</string>
    <string name="control_flash">FLASH</string>
    <string name="control_strobe">STROBE</string>
    <string name="control_fade">FADE</string>
    <string name="control_smoot">SMOOTH</string>
    <string name="control_mode_bright">亮度档位</string>
    <string name="control_mode_mode">模式档位</string>
</resources>