<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="type" />

        <EditText
            android:id="@+id/b_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="id" />

        <EditText
            android:id="@+id/b_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="arg1" />

        <EditText
            android:id="@+id/b_arg1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="arg2" />

        <EditText
            android:id="@+id/b_arg2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="otherarg"
             />

        <EditText
            android:id="@+id/b_otherarg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:singleLine="true" />

        <Button
            android:id="@+id/b_commint"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="发送" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/horizontal_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TimePicker
                android:id="@+id/alarmclock_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmclock_description"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alarmclock_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alarmclock_description_hint"
                android:maxLength="16"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmclock_repeat"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/Sunday"
                    style="@style/repeatCheckboxSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/Monday"
                    style="@style/repeatCheckboxMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/Tuesday"
                    style="@style/repeatCheckboxTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/Wednesday"
                    style="@style/repeatCheckboxWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/Thursday"
                    style="@style/repeatCheckboxThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/Friday"
                    style="@style/repeatCheckboxFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/Saturday"
                    style="@style/repeatCheckboxSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmclock_type"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/alarmclock_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmclock_music"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/alarmclock_music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/commit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/action_submit" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/action_cancel" />
    </LinearLayout>

</LinearLayout>